--- a/eb_global_sale_invoice_discounts/static/description/index.html
+++ b/eb_global_sale_invoice_discounts/static/description/index.html
@@ -3,14 +3,15 @@
     <div class="oe_row oe_spaced" style="
     margin-bottom: 0px;
 ">
-      <h2 class="oe_slogan">Lorem Ipsum is simply dummy text.</h2>
-      <h3 class="oe_slogan">Lorem Ipsum is simply dummy text of the printing and typesetting industry</h3>
-      <p class="oe_mt32"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. </p>
+      <h2 class="oe_slogan">Global Sale Order Invoice Discount</h2>
+      <h3 class="oe_slogan"This module allows you to give discount on total amount of sale order and invoice</h3>
+      <p class="oe_mt32">This module allows you to give discount on total amount of sale order and invoice. </p>
     </div>
     <div class="oe_row oe_spaced">
       <div class="oe_span12">
-        <p class="oe_mt32"> ☛ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s </p>
-        <p class="oe_mt32"> ☛ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s </p>
+        <h2 class="oe_slogan">You can add your discount in two ways:</h2>
+        <p class="oe_mt32"> ☛Add it <b>BEFORE TAX</b> and PERCENTAGE or FIXED AMOUNT </p>
+        <p class="oe_mt32"> ☛Add it <b>AFTER TAX</b> and PERCENTAGE or FIXED AMOUNT </p>
         <div class="oe_centeralign oe_websiteonly"> </div>
       </div>
     </div>
