--- a/eb_global_sale_invoice_discounts/static/description/index.html
+++ b/eb_global_sale_invoice_discounts/static/description/index.html
@@ -5,13 +5,13 @@
 ">
       <h2 class="oe_slogan">Global Sale Order Invoice Discount</h2>
       <h3 class="oe_slogan"This module allows you to give discount on total amount of sale order and invoice</h3>
-      <p class="oe_mt32">This module allows you to give discount on total amount of sale order and invoice. </p>
+      <p class="oe_mt32 text-center">This module allows you to give discount on total amount of sale order and invoice. </p>
     </div>
     <div class="oe_row oe_spaced">
       <div class="oe_span12">
         <h2 class="oe_slogan">You can add your discount in two ways:</h2>
-        <p class="oe_mt32"> ☛Add it <b>BEFORE TAX</b> and PERCENTAGE or FIXED AMOUNT </p>
-        <p class="oe_mt32"> ☛Add it <b>AFTER TAX</b> and PERCENTAGE or FIXED AMOUNT </p>
+        <p class="oe_mt32 text-center"> ☛Add it <b>BEFORE TAX</b> and PERCENTAGE or FIXED AMOUNT </p>
+        <p class="oe_mt32 text-center"> ☛Add it <b>AFTER TAX</b> and PERCENTAGE or FIXED AMOUNT </p>
         <div class="oe_centeralign oe_websiteonly"> </div>
       </div>
     </div>
