--- a/eb_global_sale_invoice_discounts/static/description/index.html
+++ b/eb_global_sale_invoice_discounts/static/description/index.html
@@ -20,32 +20,35 @@
     <div class="oe_row">
       <h2 class="oe_slogan"> Manage Discount on Sale Order and Invoice </h2>
       <div class="oe_span6">
-        <p class="oe_mt32">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        <p class="oe_mt32">From the stock odoo instalation and modules, adding a global discount is not possible. There is only the
+        discount on order line, which is not good for us, and for you too. We want to add a GLOBAL discount that will affect
+      the total amount of the invoice or sale order.</p>
       </div>
       <div class="oe_span6"> <img class="oe_picture oe_screenshot" src="sasa.jpg"> </div>
     </div>
   </section>
   <section>
     <div class="oe_row">
-      <h2 class="oe_slogan"> Choose the Type if it After Or Before Applying Taxes </h2>
+      <h2 class="oe_slogan"> Choose the Type That You Need: After Or Before Applying Taxes! </h2>
       <div class="oe_span6">
-        <p class="oe_mt32">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        <p class="oe_mt32">It is self explanatory, the discount will be calculated as per your selection.</p>
       </div>
       <div class="oe_span6"> <img class="oe_picture oe_screenshot" src="sasa.jpg"> </div>
     </div>
   </section>
   <section class="oe_container oe_dark">
     <div class="oe_row">
-      <h2 class="oe_slogan">You Can Choose Either Fixed Amount Or Percentage Wise</h2>
+      <h2 class="oe_slogan">You Can Choose Fixed Amount Discount</h2>
       <div class="oe_span6">
-        <p class="oe_mt32"> Lorem Ipsum is simply dummy text<br>
+        <p class="oe_mt32"> In fixed amount you can give a discount per the invoice in AMOUNT. (Will be substracted from the Total Amount)<br>
         </p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="1.png"> </div>
       </div>
+      <h2 class="oe_slogan">You Can Choose Percentage Discount</h2>
       <div class="oe_span6">
-        <p class="oe_mt32"> Lorem Ipsum is simply dummy text <br>
+        <p class="oe_mt32"> In percentage discount you can give a discount per the invoice in PERCENT. (eg. %10)<br>
         </p>
-        <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="2.png"> </div>
+        <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="1.png"> </div>
       </div>
       <div class="oe_span6">
         <p class="oe_mt32"> Lorem Ipsum is simply dummy text <br>
