--- a/eb_global_sale_invoice_discounts/static/description/index.html
+++ b/eb_global_sale_invoice_discounts/static/description/index.html
@@ -44,24 +44,23 @@
         </p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="1.png"> </div>
       </div>
-      <h2 class="oe_slogan">You Can Choose Percentage Discount</h2>
       <div class="oe_span6">
-        <p class="oe_mt32"> In percentage discount you can give a discount per the invoice in PERCENT. (eg. %10)<br>
+          <h2 class="oe_slogan">You Can Choose Percentage Discount</h2>
         </p>
-        <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="1.png"> </div>
+        <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="2.png"> </div>
       </div>
       <div class="oe_span6">
-        <p class="oe_mt32"> Lorem Ipsum is simply dummy text <br>
+        <p class="oe_mt32"> The discount will affect TOTAL AMOUNT <br>
         </p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="3.png"> </div>
       </div>
       <div class="oe_span6">
-        <p class="oe_mt32"> Lorem Ipsum is simply dummy text <br>
+        <p class="oe_mt32"> Not depending on the number of products <br>
         </p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="4.png"> </div>
       </div>
       <div class="oe_span6">
-        <p class="oe_mt32"> Lorem Ipsum is simply dummy text <br>
+        <p class="oe_mt32"> Very convinient, isn't it? <br>
         </p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="5.png"> </div>
       </div>
@@ -71,7 +70,7 @@
     <div class="oe_row">
       <h2 class="oe_slogan"> Manage Discount on Sale Order and Invoice </h2>
       <div class="oe_span6">
-        <p class="oe_mt32">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        <p class="oe_mt32">This module was developed for our system, but we feel the need to share and to ease your work too.</p>
       </div>
       <div class="oe_span6"> <img class="oe_picture oe_screenshot" src="sasa.jpg"> </div>
     </div>
