--- a/eb_global_sale_invoice_discounts/static/description/index.html
+++ b/eb_global_sale_invoice_discounts/static/description/index.html
@@ -38,14 +38,14 @@
   </section>
   <section class="oe_container oe_dark">
     <div class="oe_row">
-      <h2 class="oe_slogan">You Can Choose Fixed Amount Discount</h2>
+      <h2 class="oe_slogan">Versatile discount, FIXED and PERCENTAGE!</h2>
       <div class="oe_span6">
         <p class="oe_mt32"> In fixed amount you can give a discount per the invoice in AMOUNT. (Will be substracted from the Total Amount)<br>
         </p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="1.png"> </div>
       </div>
       <div class="oe_span6">
-          <h2 class="oe_slogan">You Can Choose Percentage Discount</h2>
+          <p class="oe_mt32">You Can Choose Percentage Discount</p>
         </p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="2.png"> </div>
       </div>
