--- a/eb_global_sale_invoice_discounts/static/description/index.html
+++ b/eb_global_sale_invoice_discounts/static/description/index.html
@@ -40,8 +40,7 @@
     <div class="oe_row">
       <h2 class="oe_slogan">Versatile discount, FIXED and PERCENTAGE!</h2>
       <div class="oe_span6">
-        <p class="oe_mt32"> In fixed amount you can give a discount per the invoice in AMOUNT. (Will be substracted from the Total Amount)<br>
-        </p>
+        <p class="oe_mt32"> Fixed amount in round or total number! (100$ or 100.5$)</p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="1.png"> </div>
       </div>
       <div class="oe_span6">
@@ -66,7 +65,7 @@
       </div>
     </div>
   </section>
-  <section>
+  <!-- <section>
     <div class="oe_row">
       <h2 class="oe_slogan"> Manage Discount on Sale Order and Invoice </h2>
       <div class="oe_span6">
@@ -74,9 +73,9 @@
       </div>
       <div class="oe_span6"> <img class="oe_picture oe_screenshot" src="sasa.jpg"> </div>
     </div>
-  </section>
+  </section> -->
   <section class="oe_container oe_dark">
     <h2 class="oe_slogan" style="margin-top:20px;">Need Any Help?</h2>
-    <div class="oe_slogan" style="margin-top:10px !important;"> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="#"><span class="o_ripple" style="height: 106px; width: 106px; top: -18px; left: 18.0313px;"></span><i class="fa fa-envelope"></i> Email </a> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="#"><i class="fa fa-phone"></i> Contact Us </a> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="#"><i class="fa fa-check-square"></i> Request Customization </a> </div>
-    <img src="https://www.dropbox.com/s/zgu8fd25fvoamut/logo-300.png?dl=1" style="width: 190px; margin-bottom: 20px;" class="center-block"> </section>
+    <div class="oe_slogan" style="margin-top:10px !important;"> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="odoo@simplify-erp.com"><span class="o_ripple" style="height: 106px; width: 106px; top: -18px; left: 18.0313px;"></span><i class="fa fa-envelope"></i> Email </a> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="tel:+49-711-7947-2394"><i class="fa fa-phone"></i> Contact Us </a> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="www.simplify-erp.com"><i class="fa fa-check-square"></i> Request Customization </a> </div>
+    <a href="www.simplify-erp.com"><img src="https://www.dropbox.com/s/zgu8fd25fvoamut/logo-300.png?dl=1" style="width: 190px; margin-bottom: 20px;" class="center-block"> </a></section>
 </div>
