--- a/eb_global_sale_invoice_discounts/static/description/index.html
+++ b/eb_global_sale_invoice_discounts/static/description/index.html
@@ -3,7 +3,7 @@
     <div class="oe_row oe_spaced" style="
     margin-bottom: 0px;
 ">
-      <h2 class="oe_slogan">Global Sale Order Invoice Discount</h2>
+      <h2 class="oe_slogan">Global Sale Order Invoice Discount</h2><br/>
       <h3 class="oe_slogan"This module allows you to give discount on total amount of sale order and invoice</h3>
       <p class="oe_mt32 text-center">This module allows you to give discount on total amount of sale order and invoice. </p>
     </div>
