--- a/eb_global_sale_invoice_discounts/static/description/index.html
+++ b/eb_global_sale_invoice_discounts/static/description/index.html
@@ -3,63 +3,63 @@
     <div class="oe_row oe_spaced" style="
     margin-bottom: 0px;
 ">
-      <h2 class="oe_slogan">Global Sale Order Invoice Discount</h2>
+      <h2 class="oe_slogan">Globaler Verkauf Auftragsrechnungsrabatt</h2>
       <h3 class="oe_slogan"This module allows you to give discount on total amount of sale order and invoice</h3>
-      <p class="oe_mt32 text-center">This module allows you to give discount on total amount of sale order and invoice. </p>
+      <p class="oe_mt32 text-center">Dieses Modul erlaubt Ihnen, Rabatt auf Gesamtbetrag der Bestellung und Rechnung zu geben. </p>
     </div>
     <div class="oe_row oe_spaced">
       <div class="oe_span12">
-        <h2 class="oe_slogan">You can add your discount in two ways:</h2>
-        <p class="oe_mt32 text-center"> ☛Add it <b>BEFORE TAX</b> and PERCENTAGE or FIXED AMOUNT </p>
-        <p class="oe_mt32 text-center"> ☛Add it <b>AFTER TAX</b> and PERCENTAGE or FIXED AMOUNT </p>
+        <h2 class="oe_slogan">Sie können Ihren Rabatt auf zwei Arten hinzufügen:</h2>
+        <p class="oe_mt32 text-center"> ☛Fügen Sie es <b> VOR STEUER </ b> und PERCENTAGE oder FIXED AMOUNT </p>
+        <p class="oe_mt32 text-center"> ☛Füge es hinzu <b> NACH STEUER </ b> und PERCENTAGE oder FIXED AMOUNT </p>
         <div class="oe_centeralign oe_websiteonly"> </div>
       </div>
     </div>
   </section>
   <section class="oe_container oe_dark">
     <div class="oe_row">
-      <h2 class="oe_slogan"> Manage Discount on Sale Order and Invoice </h2>
+      <h2 class="oe_slogan"> Verwalten Sie den Rabatt bei Verkaufsauftrag und Rechnung </h2>
       <div class="oe_span6">
-        <p class="oe_mt32">From the stock odoo instalation and modules, adding a global discount is not possible. There is only the
-        discount on order line, which is not good for us, and for you too. We want to add a GLOBAL discount that will affect
-      the total amount of the invoice or sale order.</p>
+        <p class="oe_mt32">Von der Aktie odoo Instalation und Module, Hinzufügen eines globalen Rabatt ist nicht möglich. Es gibt nur die
+         Rabatt auf Bestellung Linie, die nicht gut für uns ist, und für Sie auch. Wir wollen einen GLOBAL-Rabatt hinzufügen, der sich auswirken wird
+       Den Gesamtbetrag der Rechnung oder des Verkaufsauftrags.</p>
       </div>
       <div class="oe_span6"> <img class="oe_picture oe_screenshot" src="sasa.jpg"> </div>
     </div>
   </section>
   <section>
     <div class="oe_row">
-      <h2 class="oe_slogan"> Choose the Type That You Need: After Or Before Applying Taxes! </h2>
+      <h2 class="oe_slogan"> Wählen Sie die Art, die Sie benötigen: Nach oder vor dem Anwenden von Steuern!</h2>
       <div class="oe_span6">
-        <p class="oe_mt32">It is self explanatory, the discount will be calculated as per your selection.</p>
+        <p class="oe_mt32">Es ist selbsterklärend, der Rabatt wird nach Ihrer Auswahl berechnet.</p>
       </div>
       <div class="oe_span6"> <img class="oe_picture oe_screenshot" src="sasa.jpg"> </div>
     </div>
   </section>
   <section class="oe_container oe_dark">
     <div class="oe_row">
-      <h2 class="oe_slogan">Versatile discount, FIXED and PERCENTAGE!</h2>
+      <h2 class="oe_slogan">Vielseitiger Rabatt, FIXED und PERCENTAGE!</h2>
       <div class="oe_span6">
-        <p class="oe_mt32"> Fixed amount in round or total number! (100$ or 100.5$)</p>
+        <p class="oe_mt32"> Fester Betrag in Runde oder Gesamtzahl! (100 $ oder 100,5 $)</p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="1.png"> </div>
       </div>
       <div class="oe_span6">
-          <p class="oe_mt32">You Can Choose Percentage Discount</p>
+          <p class="oe_mt32">Sie können Prozentsatz wählen</p>
         </p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="2.png"> </div>
       </div>
       <div class="oe_span6">
-        <p class="oe_mt32"> The discount will affect TOTAL AMOUNT <br>
+        <p class="oe_mt32"> Der Rabatt beeinträchtigt den Gesamtpreis <br>
         </p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="3.png"> </div>
       </div>
       <div class="oe_span6">
-        <p class="oe_mt32"> Not depending on the number of products <br>
+        <p class="oe_mt32"> Nicht abhängig von der Anzahl der Produkte <br>
         </p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="4.png"> </div>
       </div>
       <div class="oe_span6">
-        <p class="oe_mt32"> Very convinient, isn't it? <br>
+        <p class="oe_mt32"> Sehr einfach, nicht wahr? <br>
         </p>
         <div class="oe_row_img oe_centered"> <img class="oe_demo oe_picture oe_screenshot" src="5.png"> </div>
       </div>
@@ -75,7 +75,7 @@
     </div>
   </section> -->
   <section class="oe_container oe_dark">
-    <h2 class="oe_slogan" style="margin-top:20px;">Need Any Help?</h2>
-    <div class="oe_slogan" style="margin-top:10px !important;"> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="mailto:odoo@simplify-erp.com"><span class="o_ripple" style="height: 106px; width: 106px; top: -18px; left: 18.0313px;"></span><i class="fa fa-envelope"></i> Email </a> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="tel:+49-711-7947-2394"><i class="fa fa-phone"></i> Contact Us </a> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="https://www.simplify-erp.com"><i class="fa fa-check-square"></i> Request Customization </a> </div>
+    <h2 class="oe_slogan" style="margin-top:20px;">Brauchen Sie Hilfe?</h2>
+    <div class="oe_slogan" style="margin-top:10px !important;"> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="mailto:odoo@simplify-erp.com"><span class="o_ripple" style="height: 106px; width: 106px; top: -18px; left: 18.0313px;"></span><i class="fa fa-envelope"></i> Email </a> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="tel:+49-711-7947-2394"><i class="fa fa-phone"></i> Kontakt </a> <a class="btn btn-primary btn-lg mt8" style="color: rgb(255, 255, 255) !important; position: relative; overflow: hidden;" href="https://www.simplify-erp.com"><i class="fa fa-check-square"></i> Anforderung anfordern </a> </div>
     <a href="https://www.simplify-erp.com"><img src="https://www.dropbox.com/s/zgu8fd25fvoamut/logo-300.png?dl=1" style="width: 190px; margin-bottom: 20px;" class="center-block"> </a></section>
 </div>
